chore: update docs to include update request
